Renamed script watch to start

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "build": "gulp",
-    "watch": "gulp && gulp watch"
+    "start": "gulp && gulp watch"
   },
   "devDependencies": {
     "babel-preset-babili": "^1.0.0",
