--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "pug": "^0.1.0",
+    "pug": "^2.0.0-rc.3",
     "rollup": "^0.42.0",
     "st": "^1.2.0"
   },
