--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browser-sync": "^2.23.6",
     "eslint": "^4.18.0",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^4.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "pug": "^2.0.0-rc.4",
