--- a/package.json
+++ b/package.json
@@ -12,18 +12,27 @@
     "url": "https://github.com/Thunraz/make-sail/issues"
   },
   "scripts": {
-    "build": "gulp",
-    "start": "gulp && gulp watch"
+    "build": "gulp compile",
+    "dev": "gulp"
   },
   "devDependencies": {
-    "browser-sync": "^2.23.6",
-    "eslint": "^4.18.0",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^4.0.2",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "pug": "^2.0.0-rc.4",
-    "rollup": "^0.56.2"
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^5.0.1",
+    "gulp": "^4.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-eslint": "^5.0.0",
+    "gulp-rename": "^1.2.3",
+    "gulp-uglify-es": "^1.0.1",
+    "gulp-uglifycss": "^1.1.0",
+    "gulp-util": "^3.0.8",
+    "gulp-zip": "^4.0.0",
+    "minimatch": "^3.0.4",
+    "pug": "^2.0.3",
+    "rollup": "^0.62.0",
+    "st": "^1.2.2",
+    "through2": "^2.0.3"
   },
   "dependencies": {
     "three": "^0.90.0"
