--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "url": "https://github.com/Thunraz/make-sail/issues"
   },
   "scripts": {
-    "build": "gulp compile",
-    "dev": "gulp"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "ansi-colors": "^4.1.1",
@@ -30,10 +31,10 @@
     "gulp-uglifycss": "^1.1.0",
     "gulp-zip": "^4.2.0",
     "minimatch": "^3.0.4",
-    "pug": "^2.0.3",
     "rollup": "^1.11.3",
     "st": "^1.2.2",
-    "through2": "^3.0.1"
+    "through2": "^3.0.1",
+    "vite": "^3.1.3"
   },
   "dependencies": {
     "three": "^0.104.0"
