--- a/package.json
+++ b/package.json
@@ -17,26 +17,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "ansi-colors": "^4.1.1",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^5.16.0",
-    "fancy-log": "^1.3.3",
-    "gulp": "^4.0.2",
-    "gulp-clean": "^0.4.0",
-    "gulp-concat-css": "^3.1.0",
-    "gulp-eslint": "^5.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify-es": "^1.0.1",
-    "gulp-uglifycss": "^1.1.0",
-    "gulp-zip": "^4.2.0",
-    "minimatch": "^3.0.4",
-    "rollup": "^1.11.3",
-    "st": "^1.2.2",
-    "through2": "^3.0.1",
+    "eslint": "^8.23.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "vite": "^3.1.3"
   },
   "dependencies": {
-    "three": "^0.104.0"
+    "three": "^0.144.0"
   }
 }
