--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/three": "^0.144.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
     "eslint": "^8.23.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "typescript": "^4.8.3",
     "vite": "^3.1.3"
   },
   "dependencies": {
