--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,14 @@
 {
   "compilerOptions": {
+    "isolatedModules": true,
+    "useDefineForClassFields": true,
     "module": "commonjs",
-    "target": "es6",
+    "target": "es2018",
     "sourceMap": true,
-    "lib": ["es6","dom"]
+    "lib": [
+      "es2018",
+      "dom"
+    ]
   },
   "exclude": [
     "node_modules"
