--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint . --ext .ts"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.1",
     "@types/three": "^0.144.0",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
@@ -25,6 +26,8 @@
     "eslint": "^8.23.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "jest": "^29.2.2",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.3",
     "vite": "^3.1.3"
   },
