--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.2.2",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
     "vite": "^3.1.3"
   },
