--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: ArtiomTr/jest-coverage-report-action@v2
         id: coverage
         with:
+          package-manager: yarn
           output: report-markdown
       - uses: marocchino/sticky-pull-request-comment@v2
         with:
