--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
+    "jest-mock-extended": "^3.0.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
